@@ -4,8 +4,8 @@
     <Author value="MPLogue,Pille,Stallionsden,ZZTong" />
     <Description value="Adds custom block definitions and supporting configurations. (Version A21.0.001)" />
     <DisplayName value="Custom-Blocks-Pack" />
-    <Version value="21.0.001.0014" />  <!-- [TFP-Major.TFP-Minor.CBP-Version.CBP-Build] -->
-    <!-- Build Date: 7/19/2023 -->
+    <Version value="21.0.001.0015" />  <!-- [TFP-Major.TFP-Minor.CBP-Version.CBP-Build] -->
+    <!-- Build Date: 7/22/2023 -->
     <Website value="" />
     <!-- Dependencies: None -->
 </xml>
